# settlr

./: .gitignore  CLAUDE.md  README.md  system-prompt.md
backend/: README.md  agent.py  api.py  conversation_manager.py  conversations.db  coordinates_tool.py  database.py  main.py  map_update_tool.py  properties_tool.py  pyproject.toml  regional_interests_tool.py  test_coordinates_tool.py  test_socket_client.py  websocket_manager.py
settlr-frontend/: package-lock.json  package.json
settlr-frontend/src/app/: globals.css  layout.tsx  page.tsx
settlr-frontend/src/app/map/: page.tsx
settlr-frontend/src/components/: AnimatedInput.tsx  ConnectionStatus.tsx  DraggableChat.tsx  PolygonToVideoLogic.tsx  RegionDetailsPanel.tsx  ResponsiveChat.tsx  SendButton.tsx  VideoOverlay.tsx
settlr-frontend/src/constants/: api.ts  coords.ts  mapThemes.ts  testPolygons.ts  theme.ts
settlr-frontend/src/hooks/: useSocket.ts
settlr-frontend/src/types/: chat.ts  map.ts  socket.ts
settlr-frontend/src/utils/: chatStreaming.ts  regionApi.ts  sessionUtils.ts
